squelette-pld-comp/ifcc-test-output/testfiles-4_invalid_parenthesisNotClosed/gcc-compile.txt
input.c:1:11: error: expected declaration specifiers or ‘...’ before ‘{’ token
    1 | int main( {
      |           ^

exit status: 1
